# Embracedata-downloader

./: Embracedata_Downloader.py  README.md  icon.icns  pyproject.toml
.github/workflows/: build.yaml
config/: setup_linux.py  setup_macos.py  setup_windows.py
src/: Embracedata_Downloader.py
