[tool.poetry]
name = "Embracedata-Downloader"
version = "0.1.7"
description = "Enbracedata-downloader é uma ferramenta que facilita o download automatizado de dados da plataforma Embracedata do INPE, permitindo acesso rápido a informações de clima espacial e geofísicas para pesquisa e análise."
authors = ["kaio Guilherme  <kaioguilherme444@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.build.dependencies]
cx-freeze = "^7.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
commitizen = "^3.30.0"
taskipy = "^1.14.0"
blue = "^0.9.1"
isort = "^5.13.2"
cz-conventional-gitmoji = "^0.6.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_gitmoji"
tag_format = "V$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.taskipy.tasks]
lint = "blue . && isort . && blue --check --diff ."
commit = "cz commit"
test = "pytest -s -x --cov=Embracedata-Downloader -vv"
post_test = "coverage html"